Picture description (content) is sent in the same message as Photo, with 1024 length limit. ContentHandler removed.